fix-2 added fields to csv, improved code